fix: убрать overflow: hidden, убрать горизонтальный скролл компонена PageNotFound

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,8 +8,9 @@
   min-height: 100vh;
 	margin: 0 auto;
 	text-rendering: optimizeLegibility;
+
   /* Стили для сокрытия бургер-меню */
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
   position: relative;
 }
