--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -1,5 +1,5 @@
 .page-404 {
-	width: 100vw;
+	/* width: 100vw; */
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
